# freyja

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  NOTICE.md  README.md  SECURITY.md  TROUBLESHOOTING.md  USAGE.md  build-website.sh  build.sh  go.mod  go.sum  install.sh  package-lock.json  pyproject.toml  test.sh  troubleshooting.md
.github/ISSUE_TEMPLATE/: documentation.md
.github/workflow/: deploy.yml
.github/workflows/: deploy.yml  gh-pages.yml
.run/: freyja.run.xml
cmd/freyja/: main.go
docs/: 404.html  Installation.md  configuration.md  index.html  introduction.md  kvm_libvirt_install.md  python_poetry_install.md  quickstart.md  requirements.md  sitemap.xml  troubleshooting.md  usage.md
docs/_static/: detailed.yaml
docs/markdown-page/: index.html
docs/requirements/: _category_.json  kvm_libvirt_install.md  python_poetry_install.md
examples/: basic.yaml  basic_dhcp.yaml  coreos.yaml  debian-k3s.yaml  detailed.yaml  flatcar.yaml  k3s-3nodes.yaml  net_control_plane.xml  validation.yaml  write-file.yaml
freyja/: __main__.py  configuration.py  environment.py  logger.py
freyja/cli/: cli.py  machine.py  network.py  snapshot.py
freyja/models/: machine_configuration.py  machine_info.py  network_configuration.py  network_info.py
freyja/templates/: create.sh.j2  network.xml.j2  provisioning.ign.j2  (+1 more)
internal/: cloudinit.go  config.go  configuration.go  data.go  errors.go  logger.go  utils.go
pages/: docusaurus.config.js  package-lock.json  package.json
test/: cloudinit_test.go  common.go  configuration_test.go  utils_test.go
(+137 files in other folders)
