[tool.poetry]
name = "freyja"
version = "0.1.0"
description = "VM management utility tool"
authors = ["kaio"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.0"
python-dotenv = "^0.19.2"
pydantic = "^1.10.13"
PyYAML = "^6.0"
Jinja2 = "^3.1.4"

[tool.poetry.group.dev.dependencies]
pytest-dotenv = "^0.5.2"
pytest-cov = "^4.0.0"
pytest = "^7.2.1"
safety = "^2.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
freyja = "freyja.__main__:main"
